header без меню

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <header>
     <div class="container">
       <div class="row">
-        <nav class="navbar col-xs-2 col-sm-3 order-sm-1">
+        <nav class="navbar  col-md-3 col-lg-3 order-md-1">
           <a class="navbar-brand" href="#">
             <img class="img-fluid" src="build/img/logo.png" alt="logo">
           </a>
         </nav>
-        <div class="forBag col-xs-5 col-sm-3 order-sm-3">
+        <div class="forBag  col-md-4 col-lg-3 order-md-3">
           <div class="entrance">
             <a href="#">Вход</a>
             <a href="#">Регистрация</a>
@@ -34,15 +34,15 @@
             </p>
           </div>
         </div>
-        <div class="col-xs-5 col-sm-6 order-sm-2">
+        <div class=" col-md-5 col-lg-6 order-md-2">
           <div class="phone">
             <span>(096)<span> 923-90-99</span></span>
             <span>(063)<span> 616-91-66</span></span>
           </div>
           <div class="forSearch search w-100">
             <form class="form-inline">
-              <input class="form-control col-11" type="search" placeholder="Поиск по сайту" aria-label="Search">
-              <button class="btn col-1" type="submit"><i class="fa fa-search"></i></button>
+              <input class="form-control col-10" type="search" placeholder="Поиск по сайту" aria-label="Search">
+              <button class="btn col-2" type="submit"><i class="fa fa-search"></i></button>
             </form>
           </div>
 
