--- a/index.html
+++ b/index.html
@@ -50,8 +50,89 @@
 
       </div>
     </div>
+    <div class="container-fluid forNav">
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+              <ul class="navbar-nav col-xl-12 ">
+                <li class="nav-item ">
+                  <a class="nav-link" href="#">Главная</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">О нас</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Доставка</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Как сделать заказ</a>
+                  </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Возврат товара</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Сотрудничество</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Сотрудничество</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Новости</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Контакты</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+    </div>
     
   </header>
+  <section>
+    <div class="container-fluid banerTop">
+      <div class="container justify-content-between">
+        <div class="row">
+          <div class="catalog col-12 col-sm-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis fugit quasi autem et aliquid, neque molestiae vitae deserunt voluptates dicta sit quod nobis eum. Voluptate est sunt ratione voluptatem in.</div>
+          <div id="carouselExampleIndicators" class="carousel slide col-12 col-sm-9" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                  <div class="carousel-caption ">
+                      <h5>Только в этом месяце!</h5>
+                      <p>Скидка на формы для кексов 35%!!</p>
+                    </div>
+                <div class="carousel-item active">
+                  <img src="build/img/baner.png" class="d-block w-100" alt="keks">
+                </div>
+                <div class="carousel-item">
+                  <img src="build/img/baner.png" class="d-block w-100" alt="keks">
+                </div>
+                <div class="carousel-item">
+                  <img src="build/img/baner.png" class="d-block w-100" alt="keks">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          
+        </div>
+      </div>
+    </div>
+  </section>                                                                                                                                     
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
   </script>
