--- a/index.html
+++ b/index.html
@@ -94,10 +94,30 @@
   </header>
   <section>
     <div class="container-fluid banerTop">
-      <div class="container justify-content-between">
+      <div class="container justify-content-around">
         <div class="row">
-          <div class="catalog col-12 col-sm-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis fugit quasi autem et aliquid, neque molestiae vitae deserunt voluptates dicta sit quod nobis eum. Voluptate est sunt ratione voluptatem in.</div>
-          <div id="carouselExampleIndicators" class="carousel slide col-12 col-sm-9" data-ride="carousel">
+          <div class="catalog col-12 col-sm-4 col-xl-3">
+            <h3>КАТАЛОГ</h3>
+            <ul>
+              <li><a href="#">Формы для выпечки</a></li>
+              <li><a href="#">Кондитерский инвентарь</a></li>
+              <li><a href="#">Кондитерские ингредиенты</a></li>
+              <li><a href="#">Оборудование </a></li>
+              <li><a href="#">Всё для кухни</a></li>
+              <li class="liMenu"><a href="#">Фототорт.  Печать на пищевой бумаге</a>
+                <ul class="ulMenu">
+                  <li><a href="#">Индивидуальные картинки</a></li>
+                  <li><a href="#">Картинки с деньгами копия 2</a></li>
+                  <li><a href="#">Прочие картинки</a></li>
+                  <li><a href="#">Пищевые картинки из  разных мультиков</a></li>
+                  <li><a href="#">Индивидуальные картинки копия</a></li>
+                  <li><a href="#">Картинки с деньгами копия</a></li>
+                  <li><a href="#">Прочие картинки копия</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+          <div id="carouselExampleIndicators" class="carousel slide col-12 col-sm-8 col-xl-9" data-ride="carousel">
               <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -126,7 +146,7 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
-            </div>
+          </div>
           
         </div>
       </div>
